--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
             document.getElementById("about").scrollIntoView({ behavior: "smooth" });
         }
     </script>
+<script>
+    const sections = document.querySelectorAll(".about, .contact");
+
+    window.addEventListener("scroll", () => {
+        sections.forEach(section => {
+            const sectionTop = section.getBoundingClientRect().top;
+            const triggerPoint = window.innerHeight - 100;
+
+            if (sectionTop < triggerPoint) {
+                section.classList.add("show");
+            }
+        });
+    });
+</script>
 
 </body>
 </html>
+
